--- a/training.ipynb
+++ b/training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-24T10:28:21.688658Z",
-     "start_time": "2025-04-24T10:28:21.682638Z"
+     "end_time": "2025-05-19T20:40:31.235162Z",
+     "start_time": "2025-05-19T20:40:28.745151Z"
     }
    },
    "source": [
@@ -17,13 +17,13 @@
     "from torch.utils.data import DataLoader"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-24T10:27:09.783844Z",
-     "start_time": "2025-04-24T10:27:09.776844Z"
+     "end_time": "2025-05-19T20:40:32.538653Z",
+     "start_time": "2025-05-19T20:40:32.513962Z"
     }
    },
    "cell_type": "code",
@@ -44,27 +44,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA is not available. Training will be performed on the CPU.\n"
+      "CUDA is available! You can use a GPU for training.\n",
+      "Number of GPUs available: 1\n",
+      "Current GPU being used: 0\n",
+      "GPU Name: NVIDIA GeForce RTX 3050 Laptop GPU\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-23T21:32:49.446882Z",
-     "start_time": "2025-04-23T21:32:49.441573Z"
+     "end_time": "2025-05-19T20:43:53.206887Z",
+     "start_time": "2025-05-19T20:43:53.201381Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Set dataset path\n",
-    "data_path = r\"C:\\my files\\thesis\\AI_training\\data\\training_data\\training_data_noise_1\"\n",
+    "data_path = r'C:\\my files\\thesis\\AI_training\\data\\training_data\\training_data_noise_extended'\n",
     "extension = \"*.csv\"\n",
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
-    "input_size = 14  # Number of CAN signals per timestep\n",
+    "input_size = 26  # Number of CAN signals per timestep\n",
     "hidden_size = [64, 64, 64, 128, 128, 128, 64, 64, 64, 128, 128, 128]\n",
     "num_layers = [1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2]\n",
     "learning_rate = [0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001]\n",
@@ -81,17 +84,17 @@
     "\n",
     "num_models = 12\n",
     "\n",
-    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_3\\model_\""
+    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_4\\model_\""
    ],
    "id": "65139ecfaf0a1ccf",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-24T03:37:41.870941Z",
-     "start_time": "2025-04-23T21:32:52.149383Z"
+     "end_time": "2025-05-20T04:45:55.793537Z",
+     "start_time": "2025-05-19T20:43:57.105543Z"
     }
    },
    "cell_type": "code",
@@ -145,190 +148,190 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/15], Loss: 59.9842\n",
-      "Epoch [2/15], Loss: 4.1274\n",
-      "Epoch [3/15], Loss: 0.9704\n",
-      "Epoch [4/15], Loss: 0.5587\n",
-      "Epoch [5/15], Loss: 0.3435\n",
-      "Epoch [6/15], Loss: 0.3269\n",
-      "Epoch [7/15], Loss: 0.2652\n",
-      "Epoch [8/15], Loss: 0.2286\n",
-      "Epoch [9/15], Loss: 0.2389\n",
-      "Epoch [10/15], Loss: 0.1764\n",
-      "Epoch [11/15], Loss: 0.5069\n",
-      "Epoch [12/15], Loss: 2.7883\n",
-      "Epoch [13/15], Loss: 0.8153\n",
-      "Epoch [14/15], Loss: 0.6218\n",
-      "Epoch [15/15], Loss: 0.5522\n",
-      "Epoch [1/15], Loss: 61.2395\n",
-      "Epoch [2/15], Loss: 4.5348\n",
-      "Epoch [3/15], Loss: 1.6327\n",
-      "Epoch [4/15], Loss: 0.5570\n",
-      "Epoch [5/15], Loss: 0.5512\n",
-      "Epoch [6/15], Loss: 0.2947\n",
-      "Epoch [7/15], Loss: 0.2912\n",
-      "Epoch [8/15], Loss: 0.2874\n",
-      "Epoch [9/15], Loss: 0.3164\n",
-      "Epoch [10/15], Loss: 0.3027\n",
-      "Epoch [11/15], Loss: 0.3457\n",
-      "Epoch [12/15], Loss: 0.2403\n",
-      "Epoch [13/15], Loss: 0.2255\n",
-      "Epoch [14/15], Loss: 0.3473\n",
-      "Epoch [15/15], Loss: 0.2891\n",
-      "Epoch [1/15], Loss: 62.1154\n",
-      "Epoch [2/15], Loss: 5.1884\n",
-      "Epoch [3/15], Loss: 2.9193\n",
-      "Epoch [4/15], Loss: 1.4259\n",
-      "Epoch [5/15], Loss: 0.9412\n",
-      "Epoch [6/15], Loss: 0.5661\n",
-      "Epoch [7/15], Loss: 0.7026\n",
-      "Epoch [8/15], Loss: 0.5309\n",
-      "Epoch [9/15], Loss: 0.4425\n",
-      "Epoch [10/15], Loss: 0.4738\n",
-      "Epoch [11/15], Loss: 0.3825\n",
-      "Epoch [12/15], Loss: 0.3430\n",
-      "Epoch [13/15], Loss: 0.3099\n",
-      "Epoch [14/15], Loss: 0.6533\n",
-      "Epoch [15/15], Loss: 0.3148\n",
-      "Epoch [1/15], Loss: 33.3457\n",
-      "Epoch [2/15], Loss: 2.7020\n",
-      "Epoch [3/15], Loss: 0.8562\n",
-      "Epoch [4/15], Loss: 0.6593\n",
-      "Epoch [5/15], Loss: 0.5358\n",
-      "Epoch [6/15], Loss: 0.4362\n",
-      "Epoch [7/15], Loss: 0.3575\n",
-      "Epoch [8/15], Loss: 0.3086\n",
-      "Epoch [9/15], Loss: 0.2599\n",
-      "Epoch [10/15], Loss: 0.2199\n",
-      "Epoch [11/15], Loss: 0.1942\n",
-      "Epoch [12/15], Loss: 0.2050\n",
-      "Epoch [13/15], Loss: 0.1860\n",
-      "Epoch [14/15], Loss: 0.1730\n",
-      "Epoch [15/15], Loss: 0.1778\n",
-      "Epoch [1/15], Loss: 27.8241\n",
-      "Epoch [2/15], Loss: 0.9295\n",
-      "Epoch [3/15], Loss: 0.5788\n",
-      "Epoch [4/15], Loss: 0.3729\n",
-      "Epoch [5/15], Loss: 0.4924\n",
-      "Epoch [6/15], Loss: 0.3954\n",
-      "Epoch [7/15], Loss: 0.4716\n",
-      "Epoch [8/15], Loss: 0.3689\n",
-      "Epoch [9/15], Loss: 0.4797\n",
-      "Epoch [10/15], Loss: 0.2985\n",
-      "Epoch [11/15], Loss: 0.2353\n",
-      "Epoch [12/15], Loss: 0.2662\n",
-      "Epoch [13/15], Loss: 0.2608\n",
-      "Epoch [14/15], Loss: 0.2351\n",
-      "Epoch [15/15], Loss: 0.3873\n",
-      "Epoch [1/15], Loss: 12.0747\n",
-      "Epoch [2/15], Loss: 1.0616\n",
-      "Epoch [3/15], Loss: 0.9048\n",
-      "Epoch [4/15], Loss: 0.7162\n",
-      "Epoch [5/15], Loss: 0.7015\n",
-      "Epoch [6/15], Loss: 0.6855\n",
-      "Epoch [7/15], Loss: 0.6754\n",
-      "Epoch [8/15], Loss: 0.5130\n",
-      "Epoch [9/15], Loss: 0.6719\n",
-      "Epoch [10/15], Loss: 0.4726\n",
-      "Epoch [11/15], Loss: 0.4853\n",
-      "Epoch [12/15], Loss: 0.3161\n",
-      "Epoch [13/15], Loss: 0.5073\n",
-      "Epoch [14/15], Loss: 0.3449\n",
-      "Epoch [15/15], Loss: 0.4067\n",
-      "Epoch [1/15], Loss: 13.0701\n",
-      "Epoch [2/15], Loss: 24.1961\n",
-      "Epoch [3/15], Loss: 19.5868\n",
-      "Epoch [4/15], Loss: 3.1205\n",
-      "Epoch [5/15], Loss: 2.3463\n",
-      "Epoch [6/15], Loss: 2.1605\n",
-      "Epoch [7/15], Loss: 1.5373\n",
-      "Epoch [8/15], Loss: 1.4876\n",
-      "Epoch [9/15], Loss: 1.4382\n",
-      "Epoch [10/15], Loss: 1.3115\n",
-      "Epoch [11/15], Loss: 1.4154\n",
-      "Epoch [12/15], Loss: 1.1096\n",
-      "Epoch [13/15], Loss: 1.1620\n",
-      "Epoch [14/15], Loss: 1.2146\n",
-      "Epoch [15/15], Loss: 0.9571\n",
-      "Epoch [1/15], Loss: 51.0207\n",
-      "Epoch [2/15], Loss: 3.7552\n",
-      "Epoch [3/15], Loss: 1.1472\n",
-      "Epoch [4/15], Loss: 0.4721\n",
-      "Epoch [5/15], Loss: 0.3638\n",
-      "Epoch [6/15], Loss: 0.3859\n",
-      "Epoch [7/15], Loss: 0.2560\n",
-      "Epoch [8/15], Loss: 0.2450\n",
-      "Epoch [9/15], Loss: 0.2417\n",
-      "Epoch [10/15], Loss: 0.2140\n",
-      "Epoch [11/15], Loss: 0.3521\n",
-      "Epoch [12/15], Loss: 0.2001\n",
-      "Epoch [13/15], Loss: 0.4097\n",
-      "Epoch [14/15], Loss: 0.2618\n",
-      "Epoch [15/15], Loss: 0.1814\n",
-      "Epoch [1/15], Loss: 29.6458\n",
-      "Epoch [2/15], Loss: 2.1353\n",
-      "Epoch [3/15], Loss: 0.9153\n",
-      "Epoch [4/15], Loss: 0.4293\n",
-      "Epoch [5/15], Loss: 0.5014\n",
-      "Epoch [6/15], Loss: 0.4481\n",
-      "Epoch [7/15], Loss: 0.3796\n",
-      "Epoch [8/15], Loss: 0.3641\n",
-      "Epoch [9/15], Loss: 0.4181\n",
-      "Epoch [10/15], Loss: 0.3944\n",
-      "Epoch [11/15], Loss: 0.3745\n",
-      "Epoch [12/15], Loss: 0.2971\n",
-      "Epoch [13/15], Loss: 0.2748\n",
-      "Epoch [14/15], Loss: 0.4539\n",
-      "Epoch [15/15], Loss: 0.2974\n",
-      "Epoch [1/15], Loss: 133.7545\n",
-      "Epoch [2/15], Loss: 49.3123\n",
-      "Epoch [3/15], Loss: 22.0875\n",
-      "Epoch [4/15], Loss: 10.6277\n",
-      "Epoch [5/15], Loss: 4.9184\n",
-      "Epoch [6/15], Loss: 2.1760\n",
-      "Epoch [7/15], Loss: 0.9398\n",
-      "Epoch [8/15], Loss: 0.3951\n",
-      "Epoch [9/15], Loss: 0.1729\n",
-      "Epoch [10/15], Loss: 0.0934\n",
-      "Epoch [11/15], Loss: 0.0693\n",
-      "Epoch [12/15], Loss: 0.0555\n",
-      "Epoch [13/15], Loss: 0.0589\n",
-      "Epoch [14/15], Loss: 0.0480\n",
-      "Epoch [15/15], Loss: 0.0455\n",
-      "Epoch [1/15], Loss: 50.1609\n",
-      "Epoch [2/15], Loss: 3.0993\n",
-      "Epoch [3/15], Loss: 1.3446\n",
-      "Epoch [4/15], Loss: 0.4101\n",
-      "Epoch [5/15], Loss: 0.2484\n",
-      "Epoch [6/15], Loss: 0.3437\n",
-      "Epoch [7/15], Loss: 0.2391\n",
-      "Epoch [8/15], Loss: 0.2756\n",
-      "Epoch [9/15], Loss: 0.2819\n",
-      "Epoch [10/15], Loss: 0.2675\n",
-      "Epoch [11/15], Loss: 0.2431\n",
-      "Epoch [12/15], Loss: 0.2568\n",
-      "Epoch [13/15], Loss: 0.1981\n",
-      "Epoch [14/15], Loss: 0.1978\n",
-      "Epoch [15/15], Loss: 0.2456\n",
-      "Epoch [1/15], Loss: 15.6310\n",
-      "Epoch [2/15], Loss: 0.8925\n",
-      "Epoch [3/15], Loss: 0.7435\n",
-      "Epoch [4/15], Loss: 0.6637\n",
-      "Epoch [5/15], Loss: 0.6065\n",
-      "Epoch [6/15], Loss: 0.5679\n",
-      "Epoch [7/15], Loss: 0.3664\n",
-      "Epoch [8/15], Loss: 0.4195\n",
-      "Epoch [9/15], Loss: 0.5370\n",
-      "Epoch [10/15], Loss: 0.3837\n",
-      "Epoch [11/15], Loss: 0.4119\n",
-      "Epoch [12/15], Loss: 0.3840\n",
-      "Epoch [13/15], Loss: 0.3678\n",
-      "Epoch [14/15], Loss: 0.4414\n",
-      "Epoch [15/15], Loss: 0.3384\n"
+      "Epoch [1/15], Loss: 66.9763\n",
+      "Epoch [2/15], Loss: 6.3959\n",
+      "Epoch [3/15], Loss: 1.4663\n",
+      "Epoch [4/15], Loss: 0.8117\n",
+      "Epoch [5/15], Loss: 0.6463\n",
+      "Epoch [6/15], Loss: 0.5716\n",
+      "Epoch [7/15], Loss: 0.5462\n",
+      "Epoch [8/15], Loss: 0.4167\n",
+      "Epoch [9/15], Loss: 0.4270\n",
+      "Epoch [10/15], Loss: 0.3526\n",
+      "Epoch [11/15], Loss: 0.2898\n",
+      "Epoch [12/15], Loss: 0.2786\n",
+      "Epoch [13/15], Loss: 0.2567\n",
+      "Epoch [14/15], Loss: 0.2152\n",
+      "Epoch [15/15], Loss: 0.2226\n",
+      "Epoch [1/15], Loss: 64.9594\n",
+      "Epoch [2/15], Loss: 5.7559\n",
+      "Epoch [3/15], Loss: 2.1266\n",
+      "Epoch [4/15], Loss: 1.0060\n",
+      "Epoch [5/15], Loss: 0.6743\n",
+      "Epoch [6/15], Loss: 0.5558\n",
+      "Epoch [7/15], Loss: 0.4678\n",
+      "Epoch [8/15], Loss: 0.3789\n",
+      "Epoch [9/15], Loss: 0.3480\n",
+      "Epoch [10/15], Loss: 0.3449\n",
+      "Epoch [11/15], Loss: 0.2696\n",
+      "Epoch [12/15], Loss: 0.2202\n",
+      "Epoch [13/15], Loss: 0.2087\n",
+      "Epoch [14/15], Loss: 0.1709\n",
+      "Epoch [15/15], Loss: 0.1569\n",
+      "Epoch [1/15], Loss: 69.3748\n",
+      "Epoch [2/15], Loss: 5.7292\n",
+      "Epoch [3/15], Loss: 1.3461\n",
+      "Epoch [4/15], Loss: 0.6781\n",
+      "Epoch [5/15], Loss: 0.5059\n",
+      "Epoch [6/15], Loss: 0.4214\n",
+      "Epoch [7/15], Loss: 0.3443\n",
+      "Epoch [8/15], Loss: 0.2944\n",
+      "Epoch [9/15], Loss: 0.2492\n",
+      "Epoch [10/15], Loss: 0.2236\n",
+      "Epoch [11/15], Loss: 0.1864\n",
+      "Epoch [12/15], Loss: 0.2070\n",
+      "Epoch [13/15], Loss: 0.1853\n",
+      "Epoch [14/15], Loss: 0.1768\n",
+      "Epoch [15/15], Loss: 0.1839\n",
+      "Epoch [1/15], Loss: 36.8117\n",
+      "Epoch [2/15], Loss: 2.8000\n",
+      "Epoch [3/15], Loss: 0.8349\n",
+      "Epoch [4/15], Loss: 0.7226\n",
+      "Epoch [5/15], Loss: 0.6382\n",
+      "Epoch [6/15], Loss: 0.5583\n",
+      "Epoch [7/15], Loss: 0.4376\n",
+      "Epoch [8/15], Loss: 0.3393\n",
+      "Epoch [9/15], Loss: 0.3027\n",
+      "Epoch [10/15], Loss: 0.2418\n",
+      "Epoch [11/15], Loss: 0.2296\n",
+      "Epoch [12/15], Loss: 0.2144\n",
+      "Epoch [13/15], Loss: 0.2236\n",
+      "Epoch [14/15], Loss: 0.2202\n",
+      "Epoch [15/15], Loss: 0.1831\n",
+      "Epoch [1/15], Loss: 36.7234\n",
+      "Epoch [2/15], Loss: 2.9176\n",
+      "Epoch [3/15], Loss: 1.6697\n",
+      "Epoch [4/15], Loss: 1.2221\n",
+      "Epoch [5/15], Loss: 0.5769\n",
+      "Epoch [6/15], Loss: 0.5100\n",
+      "Epoch [7/15], Loss: 0.4514\n",
+      "Epoch [8/15], Loss: 0.3362\n",
+      "Epoch [9/15], Loss: 0.2771\n",
+      "Epoch [10/15], Loss: 0.2608\n",
+      "Epoch [11/15], Loss: 0.2366\n",
+      "Epoch [12/15], Loss: 0.2328\n",
+      "Epoch [13/15], Loss: 0.1920\n",
+      "Epoch [14/15], Loss: 0.2047\n",
+      "Epoch [15/15], Loss: 0.1942\n",
+      "Epoch [1/15], Loss: 36.8797\n",
+      "Epoch [2/15], Loss: 1.3852\n",
+      "Epoch [3/15], Loss: 0.7194\n",
+      "Epoch [4/15], Loss: 0.4982\n",
+      "Epoch [5/15], Loss: 0.4136\n",
+      "Epoch [6/15], Loss: 0.2967\n",
+      "Epoch [7/15], Loss: 0.2611\n",
+      "Epoch [8/15], Loss: 0.2188\n",
+      "Epoch [9/15], Loss: 0.2049\n",
+      "Epoch [10/15], Loss: 0.2231\n",
+      "Epoch [11/15], Loss: 0.1986\n",
+      "Epoch [12/15], Loss: 0.1888\n",
+      "Epoch [13/15], Loss: 0.1543\n",
+      "Epoch [14/15], Loss: 0.1822\n",
+      "Epoch [15/15], Loss: 0.1577\n",
+      "Epoch [1/15], Loss: 62.2455\n",
+      "Epoch [2/15], Loss: 4.3829\n",
+      "Epoch [3/15], Loss: 0.9518\n",
+      "Epoch [4/15], Loss: 0.6002\n",
+      "Epoch [5/15], Loss: 0.4963\n",
+      "Epoch [6/15], Loss: 0.3948\n",
+      "Epoch [7/15], Loss: 0.3941\n",
+      "Epoch [8/15], Loss: 0.4526\n",
+      "Epoch [9/15], Loss: 0.2892\n",
+      "Epoch [10/15], Loss: 0.2728\n",
+      "Epoch [11/15], Loss: 0.2780\n",
+      "Epoch [12/15], Loss: 0.2217\n",
+      "Epoch [13/15], Loss: 0.1945\n",
+      "Epoch [14/15], Loss: 0.1666\n",
+      "Epoch [15/15], Loss: 0.1604\n",
+      "Epoch [1/15], Loss: 61.6496\n",
+      "Epoch [2/15], Loss: 5.3605\n",
+      "Epoch [3/15], Loss: 1.6566\n",
+      "Epoch [4/15], Loss: 0.6803\n",
+      "Epoch [5/15], Loss: 0.4344\n",
+      "Epoch [6/15], Loss: 0.6190\n",
+      "Epoch [7/15], Loss: 0.5799\n",
+      "Epoch [8/15], Loss: 0.3631\n",
+      "Epoch [9/15], Loss: 0.2620\n",
+      "Epoch [10/15], Loss: 0.2071\n",
+      "Epoch [11/15], Loss: 0.3806\n",
+      "Epoch [12/15], Loss: 0.4195\n",
+      "Epoch [13/15], Loss: 0.4030\n",
+      "Epoch [14/15], Loss: 0.3487\n",
+      "Epoch [15/15], Loss: 0.3246\n",
+      "Epoch [1/15], Loss: 64.3090\n",
+      "Epoch [2/15], Loss: 5.6561\n",
+      "Epoch [3/15], Loss: 2.0524\n",
+      "Epoch [4/15], Loss: 0.7804\n",
+      "Epoch [5/15], Loss: 0.4957\n",
+      "Epoch [6/15], Loss: 0.5368\n",
+      "Epoch [7/15], Loss: 0.7608\n",
+      "Epoch [8/15], Loss: 0.3997\n",
+      "Epoch [9/15], Loss: 0.4115\n",
+      "Epoch [10/15], Loss: 0.3893\n",
+      "Epoch [11/15], Loss: 0.3949\n",
+      "Epoch [12/15], Loss: 0.4114\n",
+      "Epoch [13/15], Loss: 0.3666\n",
+      "Epoch [14/15], Loss: 0.2732\n",
+      "Epoch [15/15], Loss: 0.4880\n",
+      "Epoch [1/15], Loss: 28.4905\n",
+      "Epoch [2/15], Loss: 1.0573\n",
+      "Epoch [3/15], Loss: 0.8204\n",
+      "Epoch [4/15], Loss: 0.8361\n",
+      "Epoch [5/15], Loss: 0.4530\n",
+      "Epoch [6/15], Loss: 0.3950\n",
+      "Epoch [7/15], Loss: 0.3434\n",
+      "Epoch [8/15], Loss: 0.3608\n",
+      "Epoch [9/15], Loss: 0.2356\n",
+      "Epoch [10/15], Loss: 0.3006\n",
+      "Epoch [11/15], Loss: 0.3072\n",
+      "Epoch [12/15], Loss: 0.2896\n",
+      "Epoch [13/15], Loss: 0.2511\n",
+      "Epoch [14/15], Loss: 0.3534\n",
+      "Epoch [15/15], Loss: 0.3238\n",
+      "Epoch [1/15], Loss: 32.0324\n",
+      "Epoch [2/15], Loss: 1.1246\n",
+      "Epoch [3/15], Loss: 0.6827\n",
+      "Epoch [4/15], Loss: 0.5007\n",
+      "Epoch [5/15], Loss: 0.5355\n",
+      "Epoch [6/15], Loss: 0.3019\n",
+      "Epoch [7/15], Loss: 0.3502\n",
+      "Epoch [8/15], Loss: 0.3281\n",
+      "Epoch [9/15], Loss: 0.3216\n",
+      "Epoch [10/15], Loss: 0.2884\n",
+      "Epoch [11/15], Loss: 0.2136\n",
+      "Epoch [12/15], Loss: 0.2970\n",
+      "Epoch [13/15], Loss: 0.2123\n",
+      "Epoch [14/15], Loss: 0.2366\n",
+      "Epoch [15/15], Loss: 0.1796\n",
+      "Epoch [1/15], Loss: 31.6943\n",
+      "Epoch [2/15], Loss: 1.2196\n",
+      "Epoch [3/15], Loss: 0.5510\n",
+      "Epoch [4/15], Loss: 0.4336\n",
+      "Epoch [5/15], Loss: 0.6254\n",
+      "Epoch [6/15], Loss: 0.5256\n",
+      "Epoch [7/15], Loss: 0.3612\n",
+      "Epoch [8/15], Loss: 0.3597\n",
+      "Epoch [9/15], Loss: 0.3626\n",
+      "Epoch [10/15], Loss: 0.2852\n",
+      "Epoch [11/15], Loss: 0.3324\n",
+      "Epoch [12/15], Loss: 0.2452\n",
+      "Epoch [13/15], Loss: 0.3486\n",
+      "Epoch [14/15], Loss: 0.3125\n",
+      "Epoch [15/15], Loss: 0.3631\n"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 8
   },
   {
    "metadata": {
