--- a/training.ipynb
+++ b/training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-20T07:49:45.045447Z",
-     "start_time": "2025-05-20T07:49:42.662024Z"
+     "end_time": "2025-05-20T21:12:19.593945Z",
+     "start_time": "2025-05-20T21:12:17.521347Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T07:49:50.627944Z",
-     "start_time": "2025-05-20T07:49:50.603118Z"
+     "end_time": "2025-05-20T21:12:20.473672Z",
+     "start_time": "2025-05-20T21:12:20.451320Z"
     }
    },
    "cell_type": "code",
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T07:49:55.466775Z",
-     "start_time": "2025-05-20T07:49:55.461657Z"
+     "end_time": "2025-05-20T21:12:22.005209Z",
+     "start_time": "2025-05-20T21:12:22.001821Z"
     }
    },
    "cell_type": "code",
@@ -68,13 +68,13 @@
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
     "input_size = 26  # Number of CAN signals per timestep\n",
-    "hidden_size = [256, 256, 256, 512, 512, 512]\n",
-    "num_layers = [2, 3, 4, 2, 3, 4]\n",
-    "learning_rate = [0.0001, 0.0001, 0.0001, 0.0001, 0.0001, 0.0001]\n",
+    "hidden_size = [256]\n",
+    "num_layers = [4]\n",
+    "learning_rate = [0.0001]\n",
     "# num of sequences in one batch\n",
-    "batch_size = [128, 128, 128, 128, 128, 128]\n",
-    "dropout_rate = [0, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2]\n",
-    "sequence_length = [800, 800, 800, 800, 800, 800]\n",
+    "batch_size = [128]\n",
+    "dropout_rate = [0.2]\n",
+    "sequence_length = [800]\n",
     "\n",
     "\n",
     "# parameters of the simulation\n",
@@ -82,9 +82,9 @@
     "output_size = 1\n",
     "num_epochs = 20\n",
     "\n",
-    "num_models = 6\n",
+    "num_models = 1\n",
     "\n",
-    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_5\\model_\""
+    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_6\\model_\""
    ],
    "id": "65139ecfaf0a1ccf",
    "outputs": [],
@@ -93,8 +93,32 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T13:16:28.646785Z",
-     "start_time": "2025-05-20T07:49:58.295938Z"
+     "end_time": "2025-05-20T17:32:56.837634Z",
+     "start_time": "2025-05-20T17:32:56.831777Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "range(num_models)",
+   "id": "e396db2fb932dd6e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 1)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-20T22:05:40.321804Z",
+     "start_time": "2025-05-20T21:12:26.172804Z"
     }
    },
    "cell_type": "code",
@@ -128,7 +152,7 @@
     "\n",
     "            total_loss += loss.item()\n",
     "\n",
-    "        print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {total_loss/len(dataloader):.4f}\")\n",
+    "        print(f\"Model: {j}, Epoch [{epoch+1}/{num_epochs}], Loss: {total_loss/len(dataloader):.4f}\")\n",
     "\n",
     "    torch.save({\n",
     "        \"model_state_dict\": model.state_dict(),\n",
@@ -148,137 +172,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Loss: 129.1116\n",
-      "Epoch [2/20], Loss: 53.0681\n",
-      "Epoch [3/20], Loss: 28.1385\n",
-      "Epoch [4/20], Loss: 14.5476\n",
-      "Epoch [5/20], Loss: 7.9327\n",
-      "Epoch [6/20], Loss: 4.4489\n",
-      "Epoch [7/20], Loss: 2.5283\n",
-      "Epoch [8/20], Loss: 1.4570\n",
-      "Epoch [9/20], Loss: 0.8591\n",
-      "Epoch [10/20], Loss: 0.5087\n",
-      "Epoch [11/20], Loss: 0.3107\n",
-      "Epoch [12/20], Loss: 0.1937\n",
-      "Epoch [13/20], Loss: 0.1396\n",
-      "Epoch [14/20], Loss: 0.0965\n",
-      "Epoch [15/20], Loss: 0.0776\n",
-      "Epoch [16/20], Loss: 0.0576\n",
-      "Epoch [17/20], Loss: 0.0536\n",
-      "Epoch [18/20], Loss: 0.0575\n",
-      "Epoch [19/20], Loss: 0.0512\n",
-      "Epoch [20/20], Loss: 0.0452\n",
-      "Epoch [1/20], Loss: 133.8201\n",
-      "Epoch [2/20], Loss: 56.2074\n",
-      "Epoch [3/20], Loss: 26.6185\n",
-      "Epoch [4/20], Loss: 13.5347\n",
-      "Epoch [5/20], Loss: 7.2888\n",
-      "Epoch [6/20], Loss: 4.0383\n",
-      "Epoch [7/20], Loss: 2.2839\n",
-      "Epoch [8/20], Loss: 1.3064\n",
-      "Epoch [9/20], Loss: 0.7587\n",
-      "Epoch [10/20], Loss: 0.4459\n",
-      "Epoch [11/20], Loss: 0.2735\n",
-      "Epoch [12/20], Loss: 0.1768\n",
-      "Epoch [13/20], Loss: 0.1273\n",
-      "Epoch [14/20], Loss: 0.1032\n",
-      "Epoch [15/20], Loss: 0.0755\n",
-      "Epoch [16/20], Loss: 0.0594\n",
-      "Epoch [17/20], Loss: 0.0555\n",
-      "Epoch [18/20], Loss: 0.0492\n",
-      "Epoch [19/20], Loss: 0.0468\n",
-      "Epoch [20/20], Loss: 0.0481\n",
-      "Epoch [1/20], Loss: 128.9255\n",
-      "Epoch [2/20], Loss: 52.6487\n",
-      "Epoch [3/20], Loss: 23.4158\n",
-      "Epoch [4/20], Loss: 11.8963\n",
-      "Epoch [5/20], Loss: 6.3381\n",
-      "Epoch [6/20], Loss: 3.4771\n",
-      "Epoch [7/20], Loss: 1.9482\n",
-      "Epoch [8/20], Loss: 1.0863\n",
-      "Epoch [9/20], Loss: 0.6438\n",
-      "Epoch [10/20], Loss: 0.7126\n",
-      "Epoch [11/20], Loss: 0.3048\n",
-      "Epoch [12/20], Loss: 0.1815\n",
-      "Epoch [13/20], Loss: 0.1188\n",
-      "Epoch [14/20], Loss: 0.1010\n",
-      "Epoch [15/20], Loss: 0.0720\n",
-      "Epoch [16/20], Loss: 0.1004\n",
-      "Epoch [17/20], Loss: 0.0607\n",
-      "Epoch [18/20], Loss: 0.0731\n",
-      "Epoch [19/20], Loss: 0.0517\n",
-      "Epoch [20/20], Loss: 0.0585\n",
-      "Epoch [1/20], Loss: 69.1549\n",
-      "Epoch [2/20], Loss: 13.5996\n",
-      "Epoch [3/20], Loss: 4.0249\n",
-      "Epoch [4/20], Loss: 1.4357\n",
-      "Epoch [5/20], Loss: 0.5939\n",
-      "Epoch [6/20], Loss: 0.2831\n",
-      "Epoch [7/20], Loss: 0.1590\n",
-      "Epoch [8/20], Loss: 0.1032\n",
-      "Epoch [9/20], Loss: 0.0735\n",
-      "Epoch [10/20], Loss: 0.0583\n",
-      "Epoch [11/20], Loss: 0.0632\n",
-      "Epoch [12/20], Loss: 0.0574\n",
-      "Epoch [13/20], Loss: 0.0509\n",
-      "Epoch [14/20], Loss: 0.0513\n",
-      "Epoch [15/20], Loss: 0.0603\n",
-      "Epoch [16/20], Loss: 0.0430\n",
-      "Epoch [17/20], Loss: 0.0377\n",
-      "Epoch [18/20], Loss: 0.0527\n",
-      "Epoch [19/20], Loss: 0.0437\n",
-      "Epoch [20/20], Loss: 0.0379\n",
-      "Epoch [1/20], Loss: 70.2154\n",
-      "Epoch [2/20], Loss: 11.9872\n",
-      "Epoch [3/20], Loss: 3.4182\n",
-      "Epoch [4/20], Loss: 1.1783\n",
-      "Epoch [5/20], Loss: 0.4957\n",
-      "Epoch [6/20], Loss: 0.2456\n",
-      "Epoch [7/20], Loss: 0.1744\n",
-      "Epoch [8/20], Loss: 0.1291\n",
-      "Epoch [9/20], Loss: 0.0818\n",
-      "Epoch [10/20], Loss: 0.0774\n",
-      "Epoch [11/20], Loss: 0.0788\n",
-      "Epoch [12/20], Loss: 0.0619\n",
-      "Epoch [13/20], Loss: 0.0663\n",
-      "Epoch [14/20], Loss: 0.0560\n",
-      "Epoch [15/20], Loss: 0.0525\n",
-      "Epoch [16/20], Loss: 0.0573\n",
-      "Epoch [17/20], Loss: 0.0679\n",
-      "Epoch [18/20], Loss: 0.0539\n",
-      "Epoch [19/20], Loss: 0.0620\n",
-      "Epoch [20/20], Loss: 0.0524\n",
-      "Epoch [1/20], Loss: 74.5142\n",
-      "Epoch [2/20], Loss: 12.3643\n",
-      "Epoch [3/20], Loss: 3.3231\n",
-      "Epoch [4/20], Loss: 1.2043\n",
-      "Epoch [5/20], Loss: 0.4914\n",
-      "Epoch [6/20], Loss: 0.2692\n",
-      "Epoch [7/20], Loss: 0.1751\n",
-      "Epoch [8/20], Loss: 0.1189\n",
-      "Epoch [9/20], Loss: 0.1067\n",
-      "Epoch [10/20], Loss: 0.1002\n",
-      "Epoch [11/20], Loss: 0.0816\n",
-      "Epoch [12/20], Loss: 0.0915\n",
-      "Epoch [13/20], Loss: 0.0690\n",
-      "Epoch [14/20], Loss: 0.0773\n",
-      "Epoch [15/20], Loss: 0.0707\n",
-      "Epoch [16/20], Loss: 0.0697\n",
-      "Epoch [17/20], Loss: 0.0750\n",
-      "Epoch [18/20], Loss: 0.0706\n",
-      "Epoch [19/20], Loss: 0.0637\n",
-      "Epoch [20/20], Loss: 0.0638\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mIndexError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 4\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Training loops\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_models):\n\u001B[32m      3\u001B[39m     \u001B[38;5;66;03m# Load dataset and DataLoader\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m     dataset = VehicleSpeedDataset(data_path, extension, seq_length = \u001B[43msequence_length\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m, step_size = step_size)\n\u001B[32m      5\u001B[39m     dataloader = DataLoader(dataset, batch_size=batch_size[j], shuffle=\u001B[38;5;28;01mTrue\u001B[39;00m, num_workers= \u001B[32m6\u001B[39m, pin_memory=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m      7\u001B[39m     \u001B[38;5;66;03m# Initialize model, loss function, and optimizer\u001B[39;00m\n",
-      "\u001B[31mIndexError\u001B[39m: list index out of range"
+      "Model: 0, Epoch [1/20], Loss: 132.6036\n",
+      "Model: 0, Epoch [2/20], Loss: 56.2399\n",
+      "Model: 0, Epoch [3/20], Loss: 25.6993\n",
+      "Model: 0, Epoch [4/20], Loss: 14.0145\n",
+      "Model: 0, Epoch [5/20], Loss: 7.3529\n",
+      "Model: 0, Epoch [6/20], Loss: 3.9149\n",
+      "Model: 0, Epoch [7/20], Loss: 2.1530\n",
+      "Model: 0, Epoch [8/20], Loss: 1.2369\n",
+      "Model: 0, Epoch [9/20], Loss: 0.7287\n",
+      "Model: 0, Epoch [10/20], Loss: 0.4376\n",
+      "Model: 0, Epoch [11/20], Loss: 0.2651\n",
+      "Model: 0, Epoch [12/20], Loss: 0.1912\n",
+      "Model: 0, Epoch [13/20], Loss: 0.1186\n",
+      "Model: 0, Epoch [14/20], Loss: 0.1071\n",
+      "Model: 0, Epoch [15/20], Loss: 0.0695\n",
+      "Model: 0, Epoch [16/20], Loss: 0.0708\n",
+      "Model: 0, Epoch [17/20], Loss: 0.0591\n",
+      "Model: 0, Epoch [18/20], Loss: 0.0553\n",
+      "Model: 0, Epoch [19/20], Loss: 0.0502\n",
+      "Model: 0, Epoch [20/20], Loss: 0.0462\n"
      ]
     }
    ],
