--- a/testing.ipynb
+++ b/testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-20T15:44:04.246256Z",
-     "start_time": "2025-05-20T15:43:46.741789Z"
+     "end_time": "2025-05-22T06:44:40.526539Z",
+     "start_time": "2025-05-22T06:44:40.523277Z"
     }
    },
    "source": [
@@ -19,42 +19,42 @@
     "from classes import SpeedEstimatorRNNModified"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T15:44:08.285221Z",
-     "start_time": "2025-05-20T15:44:08.281241Z"
+     "end_time": "2025-05-22T06:44:41.941484Z",
+     "start_time": "2025-05-22T06:44:41.938022Z"
     }
    },
    "cell_type": "code",
    "source": [
     "#Hyperparameters\n",
     "input_size = 26  # Number of CAN signals per timestep\n",
-    "hidden_size = [256, 256, 256, 512, 512, 512]\n",
-    "num_layers = [2, 3, 4, 2, 3, 4]\n",
+    "hidden_size = [256, 256, 512, 512, 512]\n",
+    "num_layers = [3, 4, 3, 4, 3]\n",
     "output_size = 1"
    ],
    "id": "87aff2eedc0faec4",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T15:45:53.935969Z",
-     "start_time": "2025-05-20T15:45:36.173192Z"
+     "end_time": "2025-05-22T06:46:03.094042Z",
+     "start_time": "2025-05-22T06:45:50.655868Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "num_models = 6\n",
+    "num_models = 4\n",
     "num_test_data_path = [r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\auax_drv_noise_30.csv\", r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\buax_brk_noise_30.csv\",\n",
     " r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\sin_steer_noise_30.csv\",\n",
     "    r\"C:\\my files\\thesis\\AI_training\\data\\testing_data\\testing_data_noise_extended\\suay_mid_noise_30.csv\"]\n",
     "test_data = [\"auax_drv\", \"buax_brk\", \"sin_steer\", \"suay_mid\"]\n",
-    "model_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_5\\model_\"\n",
+    "model_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_7\\model_\"\n",
     "\n",
     "for i in range(num_models):\n",
     "    # Set paths and parameters for testing\n",
@@ -92,7 +92,7 @@
     "        plt.xlabel(\"Time Step [s]\")\n",
     "        plt.ylabel(\"Speed [m/s]\")\n",
     "        plt.grid()\n",
-    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_5\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
+    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
     "        plt.close()\n",
     "\n",
     "        plt.figure(figsize=(10, 6))\n",
@@ -102,7 +102,7 @@
     "        plt.xlabel(\"Time Step [s]\")\n",
     "        plt.ylabel(\"Speed difference [m/s]\")\n",
     "        plt.grid()\n",
-    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_5\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n",
+    "        plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n",
     "        plt.close()\n",
     "\n",
     "\n"
@@ -117,20 +117,20 @@
       "<>:54: SyntaxWarning: invalid escape sequence '\\m'\n",
       "<>:44: SyntaxWarning: invalid escape sequence '\\m'\n",
       "<>:54: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_24628\\932876460.py:44: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_5\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
-      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_24628\\932876460.py:54: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_5\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n"
+      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_3052\\938855127.py:44: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" +test_data[j] + \"_act_vs_predicted_speed.png\", dpi=300,)\n",
+      "C:\\Users\\ROG\\AppData\\Local\\Temp\\ipykernel_3052\\938855127.py:54: SyntaxWarning: invalid escape sequence '\\m'\n",
+      "  plt.savefig(r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\" + str(i) + \"\\model_\" + str(i) + \"_\" + test_data[j] + \"_act_vs_predicted_speed_diff.png\", dpi=300)\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T15:44:15.862901Z",
-     "start_time": "2025-05-20T15:44:15.854420Z"
+     "end_time": "2025-05-22T06:45:23.029997Z",
+     "start_time": "2025-05-22T06:45:23.026123Z"
     }
    },
    "cell_type": "code",
@@ -138,16 +138,16 @@
     "import os\n",
     "\n",
     "# Define the path where you want to create the directory\n",
-    "directory_path = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_5\\model_\"\n",
+    "directory_path = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\testing_graphs\\iteration_7\\model_\"\n",
     "\n",
-    "for k in range(12):\n",
+    "for k in range(4):\n",
     "    # Create the directory\n",
     "    directory = directory_path + str(k)\n",
     "    os.makedirs(directory, exist_ok=True)\n"
    ],
    "id": "d57085f3b4fe43ce",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 5
   }
  ],
  "metadata": {
