--- a/training.ipynb
+++ b/training.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-20T21:12:19.593945Z",
-     "start_time": "2025-05-20T21:12:17.521347Z"
+     "end_time": "2025-05-21T22:04:47.998494Z",
+     "start_time": "2025-05-21T22:04:46.015863Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T21:12:20.473672Z",
-     "start_time": "2025-05-20T21:12:20.451320Z"
+     "end_time": "2025-05-21T22:04:48.325417Z",
+     "start_time": "2025-05-21T22:04:48.299870Z"
     }
    },
    "cell_type": "code",
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T21:12:22.005209Z",
-     "start_time": "2025-05-20T21:12:22.001821Z"
+     "end_time": "2025-05-21T22:04:50.211761Z",
+     "start_time": "2025-05-21T22:04:50.208356Z"
     }
    },
    "cell_type": "code",
@@ -68,13 +68,13 @@
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
     "input_size = 26  # Number of CAN signals per timestep\n",
-    "hidden_size = [256]\n",
-    "num_layers = [4]\n",
-    "learning_rate = [0.0001]\n",
+    "hidden_size = [256, 256, 512, 512, 512]\n",
+    "num_layers = [3, 4, 3, 4, 3]\n",
+    "learning_rate = [0.0001] * 5\n",
     "# num of sequences in one batch\n",
-    "batch_size = [128]\n",
-    "dropout_rate = [0.2]\n",
-    "sequence_length = [800]\n",
+    "batch_size = [128] * 5\n",
+    "dropout_rate = [0.2] * 5\n",
+    "sequence_length = [800, 800, 800, 800, 1000]\n",
     "\n",
     "\n",
     "# parameters of the simulation\n",
@@ -82,9 +82,9 @@
     "output_size = 1\n",
     "num_epochs = 20\n",
     "\n",
-    "num_models = 1\n",
+    "num_models = 5\n",
     "\n",
-    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_6\\model_\""
+    "default_location = r\"C:\\my files\\thesis\\AI_training\\Simple RNN\\trained_models\\iteration_7\\model_\""
    ],
    "id": "65139ecfaf0a1ccf",
    "outputs": [],
@@ -117,8 +117,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-20T22:05:40.321804Z",
-     "start_time": "2025-05-20T21:12:26.172804Z"
+     "end_time": "2025-05-22T01:34:12.653277Z",
+     "start_time": "2025-05-21T22:04:54.102852Z"
     }
    },
    "cell_type": "code",
@@ -172,26 +172,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: 0, Epoch [1/20], Loss: 132.6036\n",
-      "Model: 0, Epoch [2/20], Loss: 56.2399\n",
-      "Model: 0, Epoch [3/20], Loss: 25.6993\n",
-      "Model: 0, Epoch [4/20], Loss: 14.0145\n",
-      "Model: 0, Epoch [5/20], Loss: 7.3529\n",
-      "Model: 0, Epoch [6/20], Loss: 3.9149\n",
-      "Model: 0, Epoch [7/20], Loss: 2.1530\n",
-      "Model: 0, Epoch [8/20], Loss: 1.2369\n",
-      "Model: 0, Epoch [9/20], Loss: 0.7287\n",
-      "Model: 0, Epoch [10/20], Loss: 0.4376\n",
-      "Model: 0, Epoch [11/20], Loss: 0.2651\n",
-      "Model: 0, Epoch [12/20], Loss: 0.1912\n",
-      "Model: 0, Epoch [13/20], Loss: 0.1186\n",
-      "Model: 0, Epoch [14/20], Loss: 0.1071\n",
-      "Model: 0, Epoch [15/20], Loss: 0.0695\n",
-      "Model: 0, Epoch [16/20], Loss: 0.0708\n",
-      "Model: 0, Epoch [17/20], Loss: 0.0591\n",
-      "Model: 0, Epoch [18/20], Loss: 0.0553\n",
-      "Model: 0, Epoch [19/20], Loss: 0.0502\n",
-      "Model: 0, Epoch [20/20], Loss: 0.0462\n"
+      "Model: 0, Epoch [1/20], Loss: 40.2904\n",
+      "Model: 0, Epoch [2/20], Loss: 7.4543\n",
+      "Model: 0, Epoch [3/20], Loss: 2.1809\n",
+      "Model: 0, Epoch [4/20], Loss: 0.8189\n",
+      "Model: 0, Epoch [5/20], Loss: 0.3578\n",
+      "Model: 0, Epoch [6/20], Loss: 0.1766\n",
+      "Model: 0, Epoch [7/20], Loss: 0.0968\n",
+      "Model: 0, Epoch [8/20], Loss: 0.0565\n",
+      "Model: 0, Epoch [9/20], Loss: 0.0347\n",
+      "Model: 0, Epoch [10/20], Loss: 0.0241\n",
+      "Model: 0, Epoch [11/20], Loss: 0.0174\n",
+      "Model: 0, Epoch [12/20], Loss: 0.0137\n",
+      "Model: 0, Epoch [13/20], Loss: 0.0106\n",
+      "Model: 0, Epoch [14/20], Loss: 0.0105\n",
+      "Model: 0, Epoch [15/20], Loss: 0.0121\n",
+      "Model: 0, Epoch [16/20], Loss: 0.0068\n",
+      "Model: 0, Epoch [17/20], Loss: 0.0073\n",
+      "Model: 0, Epoch [18/20], Loss: 0.0086\n",
+      "Model: 0, Epoch [19/20], Loss: 0.0071\n",
+      "Model: 0, Epoch [20/20], Loss: 0.0073\n",
+      "Model: 1, Epoch [1/20], Loss: 43.6167\n",
+      "Model: 1, Epoch [2/20], Loss: 8.1757\n",
+      "Model: 1, Epoch [3/20], Loss: 2.2464\n",
+      "Model: 1, Epoch [4/20], Loss: 0.8246\n",
+      "Model: 1, Epoch [5/20], Loss: 0.3609\n",
+      "Model: 1, Epoch [6/20], Loss: 0.1792\n",
+      "Model: 1, Epoch [7/20], Loss: 0.0964\n",
+      "Model: 1, Epoch [8/20], Loss: 0.0582\n",
+      "Model: 1, Epoch [9/20], Loss: 0.0389\n",
+      "Model: 1, Epoch [10/20], Loss: 0.0273\n",
+      "Model: 1, Epoch [11/20], Loss: 0.0176\n",
+      "Model: 1, Epoch [12/20], Loss: 0.0169\n",
+      "Model: 1, Epoch [13/20], Loss: 0.0137\n",
+      "Model: 1, Epoch [14/20], Loss: 0.0122\n",
+      "Model: 1, Epoch [15/20], Loss: 0.0107\n",
+      "Model: 1, Epoch [16/20], Loss: 0.0157\n",
+      "Model: 1, Epoch [17/20], Loss: 0.0083\n",
+      "Model: 1, Epoch [18/20], Loss: 0.0101\n",
+      "Model: 1, Epoch [19/20], Loss: 0.0108\n",
+      "Model: 1, Epoch [20/20], Loss: 0.0083\n",
+      "Model: 2, Epoch [1/20], Loss: 17.0043\n",
+      "Model: 2, Epoch [2/20], Loss: 0.7215\n",
+      "Model: 2, Epoch [3/20], Loss: 0.1544\n",
+      "Model: 2, Epoch [4/20], Loss: 0.0588\n",
+      "Model: 2, Epoch [5/20], Loss: 0.0317\n",
+      "Model: 2, Epoch [6/20], Loss: 0.0188\n",
+      "Model: 2, Epoch [7/20], Loss: 0.0193\n",
+      "Model: 2, Epoch [8/20], Loss: 0.0132\n",
+      "Model: 2, Epoch [9/20], Loss: 0.0140\n",
+      "Model: 2, Epoch [10/20], Loss: 0.0121\n",
+      "Model: 2, Epoch [11/20], Loss: 0.0123\n",
+      "Model: 2, Epoch [12/20], Loss: 0.0105\n",
+      "Model: 2, Epoch [13/20], Loss: 0.0107\n",
+      "Model: 2, Epoch [14/20], Loss: 0.0136\n",
+      "Model: 2, Epoch [15/20], Loss: 0.0076\n",
+      "Model: 2, Epoch [16/20], Loss: 0.0107\n",
+      "Model: 2, Epoch [17/20], Loss: 0.0108\n",
+      "Model: 2, Epoch [18/20], Loss: 0.0099\n",
+      "Model: 2, Epoch [19/20], Loss: 0.0118\n",
+      "Model: 2, Epoch [20/20], Loss: 0.0079\n",
+      "Model: 3, Epoch [1/20], Loss: 18.3929\n",
+      "Model: 3, Epoch [2/20], Loss: 0.7609\n",
+      "Model: 3, Epoch [3/20], Loss: 0.1601\n",
+      "Model: 3, Epoch [4/20], Loss: 0.0651\n",
+      "Model: 3, Epoch [5/20], Loss: 0.0348\n",
+      "Model: 3, Epoch [6/20], Loss: 0.0231\n",
+      "Model: 3, Epoch [7/20], Loss: 0.0172\n",
+      "Model: 3, Epoch [8/20], Loss: 0.0187\n",
+      "Model: 3, Epoch [9/20], Loss: 0.0203\n",
+      "Model: 3, Epoch [10/20], Loss: 0.0109\n",
+      "Model: 3, Epoch [11/20], Loss: 0.0251\n",
+      "Model: 3, Epoch [12/20], Loss: 0.0083\n",
+      "Model: 3, Epoch [13/20], Loss: 0.0118\n",
+      "Model: 3, Epoch [14/20], Loss: 0.0122\n",
+      "Model: 3, Epoch [15/20], Loss: 0.0106\n",
+      "Model: 3, Epoch [16/20], Loss: 0.0156\n",
+      "Model: 3, Epoch [17/20], Loss: 0.0122\n",
+      "Model: 3, Epoch [18/20], Loss: 0.0146\n",
+      "Model: 3, Epoch [19/20], Loss: 0.0112\n",
+      "Model: 3, Epoch [20/20], Loss: 0.0100\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mIndexError\u001B[39m                                Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_models):\n\u001B[32m      3\u001B[39m     \u001B[38;5;66;03m# Load dataset and DataLoader\u001B[39;00m\n\u001B[32m      4\u001B[39m     dataset = VehicleSpeedDataset(data_path, extension, seq_length = sequence_length[j], step_size = step_size)\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m     dataloader = DataLoader(dataset, batch_size=\u001B[43mbatch_size\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m, shuffle=\u001B[38;5;28;01mTrue\u001B[39;00m, num_workers= \u001B[32m6\u001B[39m, pin_memory=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m      7\u001B[39m     \u001B[38;5;66;03m# Initialize model, loss function, and optimizer\u001B[39;00m\n\u001B[32m      8\u001B[39m     device = torch.device(\u001B[33m\"\u001B[39m\u001B[33mcuda\u001B[39m\u001B[33m\"\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m torch.cuda.is_available() \u001B[38;5;28;01melse\u001B[39;00m \u001B[33m\"\u001B[39m\u001B[33mcpu\u001B[39m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mIndexError\u001B[39m: list index out of range"
      ]
     }
    ],
