--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,193 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-05-22T06:44:40.526539Z",
-     "start_time": "2025-05-22T06:44:40.523277Z"
-    }
-   },
-   "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"id\": \"initial_id\",\n",
-    "   \"metadata\": {\n",
-    "    \"collapsed\": true,\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2025-05-22T06:44:40.526539Z\",\n",
-    "     \"start_time\": \"2025-05-22T06:44:40.523277Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"source\": [\n",
-    "    \"import torch\\n\",\n",
-    "    \"from classes import FullFileForTestings  # Import dataset class and model\\n\",\n",
-    "    \"import matplotlib.pyplot as plt\\n\",\n",
-    "    \"import torch.nn as nn\\n\",\n",
-    "    \"from torch.utils.tensorboard import SummaryWriter\\n\",\n",
-    "    \"from classes import SpeedEstimatorRNNModified\"\n",
-    "   ],\n",
-    "   \"outputs\": [],\n",
-    "   \"execution_count\": 2\n",
-    "  },\n",
-    "  {\n",
-    "   \"metadata\": {\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2025-05-22T06:44:41.941484Z\",\n",
-    "     \"start_time\": \"2025-05-22T06:44:41.938022Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"source\": [\n",
-    "    \"#Hyperparameters\\n\",\n",
-    "    \"input_size = 26  # Number of CAN signals per timestep\\n\",\n",
-    "    \"hidden_size = [256, 256, 512, 512, 512]\\n\",\n",
-    "    \"num_layers = [3, 4, 3, 4, 3]\\n\",\n",
-    "    \"output_size = 1\"\n",
-    "   ],\n",
-    "   \"id\": \"87aff2eedc0faec4\",\n",
-    "   \"outputs\": [],\n",
-    "   \"execution_count\": 3\n",
-    "  },\n",
-    "  {\n",
-    "   \"metadata\": {\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2025-05-22T06:46:03.094042Z\",\n",
-    "     \"start_time\": \"2025-05-22T06:45:50.655868Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"source\": [\n",
-    "    \"num_models = 4\\n\",\n",
-    "    \"num_test_data_path = [r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\data\\\\testing_data\\\\testing_data_noise_extended\\\\auax_drv_noise_30.csv\\\", r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\data\\\\testing_data\\\\testing_data_noise_extended\\\\buax_brk_noise_30.csv\\\",\\n\",\n",
-    "    \" r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\data\\\\testing_data\\\\testing_data_noise_extended\\\\sin_steer_noise_30.csv\\\",\\n\",\n",
-    "    \"    r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\data\\\\testing_data\\\\testing_data_noise_extended\\\\suay_mid_noise_30.csv\\\"]\\n\",\n",
-    "    \"test_data = [\\\"auax_drv\\\", \\\"buax_brk\\\", \\\"sin_steer\\\", \\\"suay_mid\\\"]\\n\",\n",
-    "    \"model_location = r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\trained_models\\\\iteration_7\\\\model_\\\"\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"for i in range(num_models):\\n\",\n",
-    "    \"    # Set paths and parameters for testing\\n\",\n",
-    "    \"    model_path = model_location + str(i) + '.pt'  # Replace with the path to your saved model\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"    for j in range(len(num_test_data_path)):\\n\",\n",
-    "    \"        test_csv_path = num_test_data_path[j]\\n\",\n",
-    "    \"        # Prepare the test dataset\\n\",\n",
-    "    \"        test_dataset = FullFileForTestings(test_csv_path)\\n\",\n",
-    "    \"        features, actual_speeds = test_dataset.get_full_data()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        # Pass all data to the model directly\\n\",\n",
-    "    \"        device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\\n\",\n",
-    "    \"        features = features.unsqueeze(0)  # Add batch dimension\\n\",\n",
-    "    \"        features = features.to(device)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        # Define and load the model\\n\",\n",
-    "    \"        model = SpeedEstimatorRNNModified(input_size, hidden_size[i], num_layers[i], output_size)  # Instantiate your RNN model\\n\",\n",
-    "    \"        checkpoint = torch.load(model_path, map_location=device)\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        model.load_state_dict(checkpoint['model_state_dict'])  # Load the trained weights\\n\",\n",
-    "    \"        model = model.to(device)  # Move model to the appropriate device\\n\",\n",
-    "    \"        model.eval()  # Set model to evaluation mode\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        # Inference\\n\",\n",
-    "    \"        with torch.no_grad():\\n\",\n",
-    "    \"            predictions = model(features)\\n\",\n",
-    "    \"            predicted_speeds = predictions.cpu().numpy().flatten()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        plt.figure(figsize=(10, 6))\\n\",\n",
-    "    \"        plt.plot(actual_speeds.numpy(), label=\\\"Actual Speeds\\\")\\n\",\n",
-    "    \"        plt.plot(predicted_speeds, label=\\\"Predicted Speeds\\\", linestyle=\\\"dashed\\\")\\n\",\n",
-    "    \"        plt.legend()\\n\",\n",
-    "    \"        plt.title(\\\"Comparison of Actual vs. Predicted Vehicle Speeds (\\\" + test_data[j] + \\\")\\\")\\n\",\n",
-    "    \"        plt.xlabel(\\\"Time Step [s]\\\")\\n\",\n",
-    "    \"        plt.ylabel(\\\"Speed [m/s]\\\")\\n\",\n",
-    "    \"        plt.grid()\\n\",\n",
-    "    \"        plt.savefig(r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\testing_graphs\\\\iteration_7\\\\model_\\\" + str(i) + \\\"\\\\model_\\\" + str(i) + \\\"_\\\" +test_data[j] + \\\"_act_vs_predicted_speed.png\\\", dpi=300,)\\n\",\n",
-    "    \"        plt.close()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"        plt.figure(figsize=(10, 6))\\n\",\n",
-    "    \"        plt.plot(actual_speeds.numpy()-predicted_speeds, label=\\\"Difference\\\")\\n\",\n",
-    "    \"        plt.legend()\\n\",\n",
-    "    \"        plt.title(\\\"Difference of Actual vs. Predicted Vehicle Speeds (\\\" + test_data[j] + \\\")\\\")\\n\",\n",
-    "    \"        plt.xlabel(\\\"Time Step [s]\\\")\\n\",\n",
-    "    \"        plt.ylabel(\\\"Speed difference [m/s]\\\")\\n\",\n",
-    "    \"        plt.grid()\\n\",\n",
-    "    \"        plt.savefig(r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\testing_graphs\\\\iteration_7\\\\model_\\\" + str(i) + \\\"\\\\model_\\\" + str(i) + \\\"_\\\" + test_data[j] + \\\"_act_vs_predicted_speed_diff.png\\\", dpi=300)\\n\",\n",
-    "    \"        plt.close()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"\\n\"\n",
-    "   ],\n",
-    "   \"id\": \"6f9a52a21169108c\",\n",
-    "   \"outputs\": [\n",
-    "    {\n",
-    "     \"name\": \"stderr\",\n",
-    "     \"output_type\": \"stream\",\n",
-    "     \"text\": [\n",
-    "      \"<>:44: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"<>:54: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"<>:44: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"<>:54: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"C:\\\\Users\\\\ROG\\\\AppData\\\\Local\\\\Temp\\\\ipykernel_3052\\\\938855127.py:44: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"  plt.savefig(r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\testing_graphs\\\\iteration_7\\\\model_\\\" + str(i) + \\\"\\\\model_\\\" + str(i) + \\\"_\\\" +test_data[j] + \\\"_act_vs_predicted_speed.png\\\", dpi=300,)\\n\",\n",
-    "      \"C:\\\\Users\\\\ROG\\\\AppData\\\\Local\\\\Temp\\\\ipykernel_3052\\\\938855127.py:54: SyntaxWarning: invalid escape sequence '\\\\m'\\n\",\n",
-    "      \"  plt.savefig(r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\testing_graphs\\\\iteration_7\\\\model_\\\" + str(i) + \\\"\\\\model_\\\" + str(i) + \\\"_\\\" + test_data[j] + \\\"_act_vs_predicted_speed_diff.png\\\", dpi=300)\\n\"\n",
-    "     ]\n",
-    "    }\n",
-    "   ],\n",
-    "   \"execution_count\": 6\n",
-    "  },\n",
-    "  {\n",
-    "   \"metadata\": {\n",
-    "    \"ExecuteTime\": {\n",
-    "     \"end_time\": \"2025-05-22T06:45:23.029997Z\",\n",
-    "     \"start_time\": \"2025-05-22T06:45:23.026123Z\"\n",
-    "    }\n",
-    "   },\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"source\": [\n",
-    "    \"import os\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"# Define the path where you want to create the directory\\n\",\n",
-    "    \"directory_path = r\\\"C:\\\\my files\\\\thesis\\\\AI_training\\\\Simple RNN\\\\testing_graphs\\\\iteration_7\\\\model_\\\"\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"for k in range(4):\\n\",\n",
-    "    \"    # Create the directory\\n\",\n",
-    "    \"    directory = directory_path + str(k)\\n\",\n",
-    "    \"    os.makedirs(directory, exist_ok=True)\\n\"\n",
-    "   ],\n",
-    "   \"id\": \"d57085f3b4fe43ce\",\n",
-    "   \"outputs\": [],\n",
-    "   \"execution_count\": 5\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {\n",
-    "  \"kernelspec\": {\n",
-    "   \"display_name\": \"Python 3\",\n",
-    "   \"language\": \"python\",\n",
-    "   \"name\": \"python3\"\n",
-    "  },\n",
-    "  \"language_info\": {\n",
-    "   \"codemirror_mode\": {\n",
-    "    \"name\": \"ipython\",\n",
-    "    \"version\": 2\n",
-    "   },\n",
-    "   \"file_extension\": \".py\",\n",
-    "   \"mimetype\": \"text/x-python\",\n",
-    "   \"name\": \"python\",\n",
-    "   \"nbconvert_exporter\": \"python\",\n",
-    "   \"pygments_lexer\": \"ipython2\",\n",
-    "   \"version\": \"2.7.6\"\n",
-    "  }\n",
-    " },\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 5\n",
-    "}\n"
-   ],
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null,
+   "source": [
+    "import torch\n",
+    "from classes import FullFileForTestings  # Import dataset class and model\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from classes import SpeedEstimatorRNNModified"
+   ],
+   "id": "cd89150f1a3960e9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "#Hyperparameters\n",
+    "input_size = 26  # Number of CAN signals per timestep\n",
+    "hidden_size = [256, 256, 512, 512, 512]\n",
+    "num_layers = [3, 4, 3, 4, 3]\n",
+    "output_size = 1"
+   ],
+   "id": "bb2730a34dc746a1"
   },
   {
    "metadata": {
