--- a/training.ipynb
+++ b/training.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from classes import SpeedEstimatorRNN, VehicleSpeedDataset\n",
+    "from classes import SpeedEstimatorRNN, VehicleSpeedDataset, SpeedEstimatorLSTM\n",
     "from torch.utils.data import DataLoader\n",
     "import torch\n",
     "import torch.onnx"
@@ -69,7 +69,7 @@
     "\n",
     "# Hyperparameters that will alter throughout the model creations\n",
     "input_size = 20  # Number of CAN signals per timestep\n",
-    "hidden_size = [256, 256, 512, 512, 512]\n",
+    "hidden_size = [256, 256, 512, 512, 768]\n",
     "num_layers = [3, 4, 3, 4, 3]\n",
     "learning_rate = [0.0001] * 5\n",
     "# num of sequences in one batch\n",
@@ -91,6 +91,12 @@
    "id": "65139ecfaf0a1ccf",
    "outputs": [],
    "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "RNN",
+   "id": "9df788d644e82f0b"
   },
   {
    "metadata": {
@@ -243,6 +249,148 @@
     }
    ],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "LSTM",
+   "id": "e6fbfa718723a143"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Initialize variables to track the best test/validation loss\n",
+    "patience = 5\n",
+    "\n",
+    "# Training loops\n",
+    "for j in range(num_models):\n",
+    "\n",
+    "    early_stopping_counter = 0\n",
+    "    best_test_loss = float('inf')\n",
+    "\n",
+    "    print(\"-------------------------------------\")\n",
+    "    print(f\"Training has started for model {j}\")\n",
+    "\n",
+    "    # Load dataset and DataLoader\n",
+    "    train_dataset = VehicleSpeedDataset(training_data_path, extension, seq_length = sequence_length[j], step_size = step_size)\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=batch_size[j], shuffle=True, num_workers= 6, pin_memory=True)\n",
+    "\n",
+    "    # Load test dataset and DataLoader\n",
+    "    test_dataset = VehicleSpeedDataset(test_data_path, extension, seq_length=sequence_length[j], step_size=step_size)\n",
+    "    test_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=False)  # Batch size = 1 for test evaluation\n",
+    "\n",
+    "\n",
+    "    # Initialize model, loss function, and optimizer\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model = SpeedEstimatorLSTM(input_size, hidden_size[j], num_layers[j], output_size).to(device)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=learning_rate[j])\n",
+    "\n",
+    "    example_input = torch.rand(1, sequence_length[j], input_size).to(device)  # Example input matching model dimensions\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        model.train()\n",
+    "        total_train_loss = 0\n",
+    "\n",
+    "        for batch_idx, (features, speeds) in enumerate(train_dataloader):\n",
+    "            speeds = speeds.squeeze(1)  # Remove extra dimension from speeds if present\n",
+    "            features, speeds = features.to(device), speeds.to(device)\n",
+    "\n",
+    "            # Forward pass\n",
+    "            outputs = model(features)\n",
+    "\n",
+    "            assert outputs.shape == speeds.shape, f\"Shape mismatch: outputs {outputs.shape} vs speeds {speeds.shape}\"\n",
+    "\n",
+    "            train_loss = criterion(outputs, speeds)\n",
+    "\n",
+    "            # Backward pass\n",
+    "            optimizer.zero_grad()\n",
+    "            train_loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            total_train_loss += train_loss.item()\n",
+    "\n",
+    "        print(f\"Model: {j}, Epoch [{epoch+1}/{num_epochs}], Loss: {total_train_loss/len(train_dataloader):.4f}\")\n",
+    "\n",
+    "        model.eval()\n",
+    "        total_test_loss = 0\n",
+    "\n",
+    "        with torch.no_grad():  # No need to compute gradients for validation/test\n",
+    "            for features, speeds in test_dataloader:\n",
+    "                speeds = speeds.squeeze(1)\n",
+    "                features, speeds = features.to(device), speeds.to(device)\n",
+    "\n",
+    "                # Forward pass\n",
+    "                test_outputs = model(features)\n",
+    "                test_loss = criterion(test_outputs, speeds)\n",
+    "\n",
+    "                total_test_loss += test_loss.item()\n",
+    "\n",
+    "        avg_test_loss = total_test_loss / len(test_dataloader)\n",
+    "\n",
+    "        print(f\"Model: {j}, Epoch [{epoch+1}/{num_epochs}], Test Loss: {avg_test_loss:.4f}\")\n",
+    "\n",
+    "         # Checkpoint: Save model if test loss improves\n",
+    "        if avg_test_loss < best_test_loss:\n",
+    "            print(f\"New best model found! Test Loss improved from {best_test_loss:.4f} to {avg_test_loss:.4f}\")\n",
+    "            best_test_loss = avg_test_loss\n",
+    "            early_stopping_counter = 0\n",
+    "\n",
+    "            # Save model state and optimizer state\n",
+    "            torch.save({\n",
+    "                \"model_state_dict\": model.state_dict(),\n",
+    "                \"optimizer_state_dict\": optimizer.state_dict(),\n",
+    "                \"sequence_length\": sequence_length,\n",
+    "                \"input_size\": input_size,\n",
+    "                \"hidden_size\": hidden_size,\n",
+    "                \"num_layers\": num_layers,\n",
+    "                \"output_size\": output_size,\n",
+    "                \"learning_rate\": learning_rate,\n",
+    "                \"num_epochs\": num_epochs\n",
+    "            }, location_state + str(j) + \".pt\")\n",
+    "\n",
+    "            # Save traced model for MATLAB -> taken out\n",
+    "            \"\"\"\n",
+    "            traced_model = torch.jit.trace(model, example_input)\n",
+    "            torch.jit.save(traced_model, location_traced + str(j) + \"_traced.pt\")  # Save as traced TorchScript model\n",
+    "\n",
+    "            traced_model.save(location_traced + str(j) + \"_traced_simple_save.pt\")  # Save as traced TorchScript model\n",
+    "            \"\"\"\n",
+    "\n",
+    "\n",
+    "            # Export model to ONNX\n",
+    "            onnx_model_path = location_traced + str(j) + \"_traced.onnx\"\n",
+    "\n",
+    "            torch.onnx.export(\n",
+    "                model,                     # PyTorch model\n",
+    "                example_input,             # Example input (same as used for tracing)\n",
+    "                onnx_model_path,           # Output filename\n",
+    "                export_params=True,\n",
+    "                opset_version=11,          # MATLAB supports up to opset 11/12 reliably\n",
+    "                do_constant_folding=True,\n",
+    "                input_names=['input'],\n",
+    "                output_names=['output'],\n",
+    "                dynamic_axes={'input': {0: 'batch_size'}, 'output': {0: 'batch_size'}}\n",
+    "            )\n",
+    "\n",
+    "            print(f\"all model_{j} saved\")\n",
+    "        else:\n",
+    "            early_stopping_counter += 1\n",
+    "            print(f\"Test loss has not improved; early stopping counter: {early_stopping_counter}\")\n",
+    "\n",
+    "        if early_stopping_counter >= patience:\n",
+    "            print(\"Early stopping triggered -> starting next model!\")\n",
+    "            print(\"------------------------------------------------\")\n",
+    "            break  # Exit the training loop early\n",
+    "\n",
+    "    if early_stopping_counter < patience:\n",
+    "        print(\"We're out of epochs but patience limit has not been reached -> starting next model!\")\n",
+    "        print(\"-----------------------------------------------------------------------------------\")"
+   ],
+   "id": "2190f70a3329253e"
   }
  ],
  "metadata": {
